Major refactoring, move to Java 8