@@ -1,11 +1,13 @@
 package com.iamceph.resulter.core.model;
 
-import com.iamceph.resulter.core.api.GroupedResultable;
-import com.iamceph.resulter.core.api.Resultable;
+import com.iamceph.resulter.core.GroupedResultable;
+import com.iamceph.resulter.core.Resultable;
 import com.iamceph.resulter.core.api.provider.GroupedResulterProvider;
 
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
+import java.util.stream.Collectors;
 
 final class GroupedResulterProviderImpl implements GroupedResulterProvider {
 
@@ -18,16 +20,16 @@ final class GroupedResulterProviderImpl implements GroupedResulterProvider {
 
     @Override
     public GroupedResultable of() {
-        return new GroupedResultableImpl(List.of());
+        return new GroupedResulImpl(Collections.emptyList());
     }
 
     @Override
     public GroupedResultable of(Resultable... resultable) {
-        return new GroupedResultableImpl(List.of(resultable));
+        return new GroupedResulImpl(Arrays.stream(resultable).collect(Collectors.toList()));
     }
 
     @Override
     public GroupedResultable of(Collection<Resultable> resultable) {
-        return new GroupedResultableImpl(resultable);
+        return new GroupedResulImpl(resultable);
     }
 }
